# varnish-opentracing

./: CMakeLists.txt  FindVarnishAPI.cmake  README.md  opentracing.vcc  opentracing.vcl
doc/: Proposal.md
example/: package.json
example/newspaper/: .gitignore  demo.sh  start.sh  stop.sh
example/newspaper/node/: articleGenerator.js  client.js  common.js  opentracing-express.js  server.js  setup.js
example/newspaper/node/views/: index.pug  snippet.pug  style.css
example/newspaper/varnish/: newspaper.vcl
lightstep/: CMakeLists.txt  lightstep.vcc
lightstep/src/: lightstep.cpp
module/src/: init_tracer.cpp
opentracing/: CMakeLists.txt  opentracing.vcc
opentracing/src/: extract_span_context.cpp  inject_span_context.cpp  opentracing_request_context.cpp  opentracing_request_context.h  span_map.cpp  span_map.h  tag.cpp  trace.cpp  varnish.h  varnishext.c  varnishext.h
